<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rothar</string>
    <string name="title_bike_main">List of bikes</string>
    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="accessibility_main_bike_preview">Bike preview image</string>
    <string name="accessibility_info_bike_preview">Bike preview image</string>
    <string name="bike_info_title">NAME OF BIKE</string>
    <string name="bike_info_tag">Tag Number:</string>
    <string name="bike_info_stolen">Stolen</string>
    <string name="bike_info_name">Name</string>
    <string name="bike_info_description">Description</string>
    <string name="config_scheduler_days">Allow your phone to search for stolen bicycles on following days:</string>
    <string name="config_scheduler_slots">&#8230; in following time slots:</string>
    <string name="title_activity_bicycle_add">BicycleAddActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>        
</resources>
